# CPPEpidemicsGUI

EpSimGuiCairo/: CMakeLists.txt  app.cpp  thesis_pres.pptx  window.glade
EpSimGuiCairo/GUI-Linux/: Epidemic-Simulation-GUI  TEST.txt  readme.txt
